<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">My Home</string>
    <string name="title_home">Home</string>
    <string name="title_emergency_service_call">Call</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_top_text">My Home Management</string>
    <string name="loan">Loan</string>
    <string name="daily_expense">Daily Expense</string>
    <string name="house_rent">House Rent</string>
    <string name="app_slogan">Your Everyday Assistant</string>
    <string name="change_language">Bangla</string>
    <string name="your_mobile_number" tools:ignore="MissingTranslation">Your Mobile Number</string>
    <string name="login">Log In</string>
    <string name="meters" tools:ignore="MissingTranslation">All Meter</string>
    <string name="shopping_list" tools:ignore="MissingTranslation">Shopping List</string>
    <string name="monthly_budget" tools:ignore="MissingTranslation">Monthly Budget</string>
    <string name="tenant_info" tools:ignore="MissingTranslation">Tenant Info</string>
    <string name="maintenance" tools:ignore="MissingTranslation">Maintenance</string>
    <string name="construction" tools:ignore="MissingTranslation">Construction</string>

    <string name="menu_menu2" tools:ignore="MissingTranslation">Invite Others</string>
    <string name="menu_menu3" tools:ignore="MissingTranslation">Ratings</string>

    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation">Close navigation drawer</string>
    <string name="menu_logout" tools:ignore="MissingTranslation">Log out</string>


    <string name="monthly_rent_prepare" tools:ignore="MissingTranslation">Monthly Rent Prepare</string>
    <string name="rent_collect_provide" tools:ignore="MissingTranslation">Rent Collect</string>
    <string name="total_rent_collect" tools:ignore="MissingTranslation">Total Rent Collect</string>
    <string name="advance_account" tools:ignore="MissingTranslation">Advance</string>

    <string name="add_tenant" tools:ignore="MissingTranslation">Add Tenant</string>
    <string name="tenant_name" tools:ignore="MissingTranslation">Tenant Name</string>

    <string name="flat_no" tools:ignore="MissingTranslation">Flat No</string>
    <string name="monthly_rent" tools:ignore="MissingTranslation">Monthly Rent</string>
    <string name="total_advance" tools:ignore="MissingTranslation">Total Advance</string>
    <string name="service_charge" tools:ignore="MissingTranslation">Service Charge</string>
    <string name="monthly_advance_deduction" tools:ignore="MissingTranslation">Monthly Advance Deduction</string>
    <string name="tenant" tools:ignore="MissingTranslation">Tenant</string>
    <string name="name" tools:ignore="MissingTranslation">Name</string>
    <string name="mobile" tools:ignore="MissingTranslation">Mobile</string>
    <string name="nid" tools:ignore="MissingTranslation">NID</string>
    <string name="district" tools:ignore="MissingTranslation">District</string>
    <string name="thana" tools:ignore="MissingTranslation">Thana</string>
    <string name="post_office" tools:ignore="MissingTranslation">Post Office</string>
    <string name="village" tools:ignore="MissingTranslation">Village/Area</string>
    <string name="add" tools:ignore="MissingTranslation">Add</string>
    <string name="save">Save</string>

    <string name="menu_menu1" tools:ignore="MissingTranslation">Settings</string>
    <string name="language_change" tools:ignore="MissingTranslation">Change language</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>

    <string name="rent_prepare" tools:ignore="MissingTranslation">Rent Prepare</string>
    <string name="division" tools:ignore="MissingTranslation">বিভাগ</string>
    <string name="contract_validity" tools:ignore="MissingTranslation">কন্ট্রাক্টের মেয়াদ</string>
    <string name="contract_duration" tools:ignore="MissingTranslation">কন্ট্রাক্টের স্থায়িত্ব</string>
    <string name="contract_start_date" tools:ignore="MissingTranslation">কন্ট্রাক্ট কার্যকর যেদিন থেকে</string>
    <string name="send_message" tools:ignore="MissingTranslation">মেসেজ দিন</string>
    <string name="total_rent" tools:ignore="MissingTranslation">মোট ভাড়া</string>
    <string name="advance_deduction" tools:ignore="MissingTranslation">এডভান্স কর্তন</string>
    <string name="net_rent" tools:ignore="MissingTranslation">নেট ভাড়া</string>
    <string name="electricity_bill" tools:ignore="MissingTranslation">বিদ্যুৎ বিল</string>
    <string name="gas_bill" tools:ignore="MissingTranslation">গ্যাস বিল</string>
    <string name="water_bill" tools:ignore="MissingTranslation">পানি বিল</string>
    <string name="security_bill" tools:ignore="MissingTranslation">সিকিউরিটি বিল</string>
    <string name="cleaning_bill" tools:ignore="MissingTranslation">ক্লিনিং বিল</string>
    <string name="garage_bill" tools:ignore="MissingTranslation">গ্যারেজ বিল</string>
    <string name="common_bill" tools:ignore="MissingTranslation">কমন বিল</string>
    <string name="others" tools:ignore="MissingTranslation">অন্যান্য</string>
    <string name="rent_prepare_edit" tools:ignore="MissingTranslation">ভাড়া তৈরি এডিট</string>
    <string name="month" tools:ignore="MissingTranslation">মাস</string>
    <string name="month_select" tools:ignore="MissingTranslation">মাস সিলেক্ট</string>
    <string name="tenant_all" tools:ignore="MissingTranslation">সকল ভাড়াটিয়া</string>
    <string name="details" tools:ignore="MissingTranslation">বিস্তারিত</string>
    <string name="edit" tools:ignore="MissingTranslation">সংশোধন</string>
    <string name="edit_tenant" tools:ignore="MissingTranslation">ভাড়াটিয়া তথ্য সংশোধন</string>
    <string name="tenant_details" tools:ignore="MissingTranslation">ভাড়াটিয়ার বিস্তারিত তথ্য</string>
    <string name="date" tools:ignore="MissingTranslation">তারিখ</string>
    <string name="amount" tools:ignore="MissingTranslation">টাকার পরিমাণ</string>
    <string name="expense_type" tools:ignore="MissingTranslation">ব্যয়ের খাত </string>
    <string name="year" tools:ignore="MissingTranslation">বছর</string>
    <string name="add_expense" tools:ignore="MissingTranslation">নতুন ব্যয় যুক্ত করুন</string>
    <string name="add_expense_type_title" tools:ignore="MissingTranslation">ব্যয়ের খাত তৈরি</string>
    <string name="add_expense_type" tools:ignore="MissingTranslation">+ নতুন ব্যয়ের খাত তৈরি করুন</string>
    <string name="edit_expense" tools:ignore="MissingTranslation">এডিট করুন</string>
    <string name="create_new" tools:ignore="MissingTranslation">+ নতুন একটি তৈরি করুন</string>
    <string name="previous_types" tools:ignore="MissingTranslation">পূর্ববর্তীগুলো</string>
    <string name="monthly_total_expense" tools:ignore="MissingTranslation">মাসের মোট ব্যয়</string>
    <string name="rent_collect">জমা করুন</string>

</resources>