<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="0dp"
android:background="@color/blue_grey_50"
android:orientation="vertical"
tools:context=".ui.home.daily_expense.AddExpenseTypeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <!--Top Bar-->
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="visible"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="visible"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_arrow_back" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/add_expense_type"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <!--                <TextView-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_marginTop="@dimen/xsmall"-->
                    <!--                    android:text="eGSystemBd "-->
                    <!--                    android:textSize="17sp" />-->
                </LinearLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/grey_circular_border"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="@dimen/small"
                    android:src="@drawable/heart"
                    android:visibility="gone" />


            </RelativeLayout>
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_grey_100"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:minHeight="35dp"
                    android:text="@string/previous_types" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_filter"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp" />


                <TextView
                    android:id="@+id/tv_create_new_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/create_new"
                    android:textColor="@color/green_700"
                    android:textSize="20sp"
                    app:tint="@color/green_600" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</LinearLayout>