<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.AppSettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <!--Top Bar-->
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="visible"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="visible"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_arrow_back" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <!--                <TextView-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_marginTop="@dimen/xsmall"-->
                    <!--                    android:text="eGSystemBd "-->
                    <!--                    android:textSize="17sp" />-->
                </LinearLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/grey_circular_border"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="@dimen/small"
                    android:src="@drawable/heart"
                    android:visibility="gone" />


            </RelativeLayout>
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"
                android:minHeight="25dp"
                android:orientation="vertical">

            ///

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        android:text="@string/language_change"
                        android:textColor="#6E7FAA"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="2dp"
                        android:elevation="1dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        card_view:cardCornerRadius="20dp"
                        card_view:cardElevation="1dp">

                        <LinearLayout
                            android:id="@+id/linear_change_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00BCD4"
                            android:paddingLeft="4dp"
                            android:paddingTop="2dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="2dp">

                            <!--                        <ImageView-->
                            <!--                            android:id="@+id/img_clock"-->
                            <!--                            android:layout_width="32dp"-->
                            <!--                            android:layout_height="32dp"-->
                            <!--                            android:layout_gravity="center"-->
                            <!--                            android:layout_marginStart="0dp"-->
                            <!--                            android:layout_marginTop="0dp"-->
                            <!--                            android:layout_marginEnd="0dp"-->
                            <!--                            android:layout_marginBottom="0dp"-->
                            <!--                            android:padding="5dp"-->
                            <!--                            android:src="@drawable/ic_taka_in_circle"-->
                            <!--                            app:tint="@color/colorPrimary" />-->

                            <TextView
                                android:id="@+id/tv_language"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="3dp"
                                android:fontFamily="@font/poppins_light"
                                android:gravity="center"
                                android:paddingLeft="8dp"
                                android:paddingTop="3dp"
                                android:paddingRight="8dp"
                                android:paddingBottom="3dp"
                                android:text="@string/change_language"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="17sp"
                                android:textStyle="normal"
                                app:textAllCaps="false" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>
            ///

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="3dp"
                android:layerType="software"
                android:src="@drawable/dotted" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>